# matrix-multiplication-strassen

./: README.md
Matrix multiplication/Matrix multiplication/: CMakeLists.txt  main.cpp
examples/: exampleCommands.txt  matrix-128-1.txt  matrix-128-2.txt  matrix-16-1.txt  matrix-16-2.txt  matrix-2-1.txt  matrix-2-2.txt  matrix-256-1.txt  matrix-256-2.txt  matrix-32-1.txt  matrix-32-2.txt  matrix-4-1.txt  matrix-4-2.txt  matrix-64-1.txt  matrix-64-2.txt  matrix-8-1.txt  matrix-8-2.txt
matrix-multiplication/matrix-multiplication/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp  matrix_operations.cpp  matrix_operations.hpp  strassen.cpp  strassen.hpp
